--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Andalan Kopi</title>
 
     <!-- Fonts -->
@@ -26,24 +26,67 @@
         <a href="#home">Home</a>
         <a href="#about">Tentang Kami</a>
         <a href="#menu">Menu</a>
+        <a href="#products">Produk</a>
         <a href="#contact">Contact</a>
       </div>
 
       <div class="navbar-extra">
-        <a href="#" id="search"><i data-feather="search"></i></a>
-        <a href="#" id="shoping-cart"><i data-feather="shopping-cart"></i></a>
+        <a href="#" id="search-button"><i data-feather="search"></i></a>
+        <a href="#" id="shopping-cart-button"><i data-feather="shopping-cart"></i></a>
         <a href="#" id="hamburger-menu"><i data-feather="menu"></i></a>
       </div>
+
+      <!-- Search Form Start -->
+      <div class="search-form">
+        <input type="search" id="search-box" placeholder="Cari produk..." />
+        <label for="search-box"><i data-feather="search"></i></label>
+      </div>
+      <!-- Search Form End -->
+
+      <!-- Shopping Cart Start -->
+      <div class="shopping-cart">
+        <div class="cart-item">
+          <img src="img/products/1.png" alt="Product 1" />
+        <div class="item-detail">
+            <h3>Product 1</h3>
+            <div class="item-price">IDR 50K</div>
+
+           </div>
+           <i data-feather="trash-2" class="remove-item"></i>
+          </div>
+        <div class="cart-item">
+          <img src="img/products/1.png" alt="Product 1" />
+        <div class="item-detail">
+            <h3>Product 1</h3>
+            <div class="item-price">IDR 50K</div>
+
+           </div>
+           <i data-feather="trash-2" class="remove-item"></i>
+        </div>
+        <div class="cart-item">
+          <img src="img/products/1.png" alt="Product 1" />
+        <div class="item-detail">
+            <h3>Product 1</h3>
+            <div class="item-price">IDR 50K</div>
+
+           </div>
+           <i data-feather="trash-2" class="remove-item"></i>
+        </div>
+      </div>
+      <!-- Shopping Cart End -->
+
     </nav>
     <!-- Navbar End -->
 
     <!-- Hero Section Start -->
 <section class="hero" id="home">
+  <div class="mask-container">
   <main class="content">
     <h1>Dibuat dengan biji kopi <span>Terbaik</span></h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, maiores?</p>
     <a href="#" class="cta">Beli Sekarang</a>
   </main>
+  </div>
 </section>
     <!-- Hero Section End -->
 
@@ -115,6 +158,95 @@
     </section>
     <!-- Menu Section Start -->
 
+    <!-- Product Section Start -->
+    <section class="products" id="products">
+      <h2><span>Product</span> Unggulan Kami</h2>
+      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laborum esse sint ipsam, nemo deserunt eos.</p>
+
+    <div class="row">
+      <div class="product-card">
+        <div class="product-icons">
+          <a href="#"><i data-feather="shopping-cart"></i></a>
+          <a href="#" class="item-detail-button"><i data-feather="eye"></i></a>
+        </div>
+        <div class="product-image">
+          <img src="img/products/1.png" alt="product1">
+      </div>
+      <div class="product-content">
+        <h4>Coffee Beans 1</h4>
+        <div class="product-stars">
+          <i data-feather="star" class="star-full"></i>
+          <i data-feather="star" class="star-full"></i>
+          <i data-feather="star" class="star-full"></i>
+          <i data-feather="star" class="star-full"></i>
+          <i data-feather="star"></i>
+        </div>
+        <div class="product-price">IDR 75k <span>IDR 100k</span></div>
+      </div>
+    </div>
+      <div class="product-card">
+        <div class="product-icons">
+          <a href="#"><i data-feather="shopping-cart"></i></a>
+          <a href="#" class="item-detail-button"><i data-feather="eye"></i></a>
+        </div>
+        <div class="product-image">
+          <img src="img/products/1.png" alt="product1">
+      </div>
+      <div class="product-content">
+        <h4>Coffee Beans 1</h4>
+        <div class="product-stars">
+          <i data-feather="star" class="star-full"></i>
+          <i data-feather="star" class="star-full"></i>
+          <i data-feather="star" class="star-full"></i>
+          <i data-feather="star" class="star-full"></i>
+          <i data-feather="star"></i>
+        </div>
+        <div class="product-price">IDR 75k <span>IDR 100k</span></div>
+      </div>
+    </div>
+      <div class="product-card">
+        <div class="product-icons">
+          <a href="#"><i data-feather="shopping-cart"></i></a>
+          <a href="#" class="item-detail-button"><i data-feather="eye"></i></a>
+        </div>
+        <div class="product-image">
+          <img src="img/products/1.png" alt="product1">
+      </div>
+      <div class="product-content">
+        <h4>Coffee Beans 1</h4>
+        <div class="product-stars">
+          <i data-feather="star" class="star-full"></i>
+          <i data-feather="star" class="star-full"></i>
+          <i data-feather="star" class="star-full"></i>
+          <i data-feather="star"></i>
+          <i data-feather="star"></i>
+        </div>
+        <div class="product-price">IDR 75k <span>IDR 100k</span></div>
+      </div>
+    </div>
+      <div class="product-card">
+        <div class="product-icons">
+          <a href="#"><i data-feather="shopping-cart"></i></a>
+          <a href="#" class="item-detail-button"><i data-feather="eye"></i></a>
+        </div>
+        <div class="product-image">
+          <img src="img/products/1.png" alt="product1">
+      </div>
+      <div class="product-content">
+        <h4>Coffee Beans 1</h4>
+        <div class="product-stars">
+          <i data-feather="star" class="star-full"></i>
+          <i data-feather="star" class="star-full"></i>
+          <i data-feather="star" class="star-full"></i>
+          <i data-feather="star"></i>
+          <i data-feather="star"></i>
+        </div>
+        <div class="product-price">IDR 75k <span>IDR 100k</span></div>
+      </div>
+    </div>
+    </section>
+    <!-- Product Section End -->
+
     <!-- Contact Section Start -->
     <section id="contact" class="contact">
         <h2><span>Kontak</span> Kami</h2>
@@ -165,6 +297,30 @@
       </div>
     </footer>
     <!-- Footer End -->
+
+    <!-- Modal box item Detail Start -->
+    <div class="modal" id="item-detail-modal">
+      <div class="modal-container">
+        <a href="#" class="close-icon"><i data-feather="x"></i></a>
+        <div class="modal-content">
+          <img src="img/products/1.png" alt="Product 1">
+          <div class="product-content">
+            <h3>Product 1</h3>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Harum, a facere magnam repellendus fugiat, dolorum rem aliquam provident officia voluptates consectetur ipsum velit quas fugit?</p>
+          <div class="product-stars">
+          <i data-feather="star" class="star-full"></i>
+          <i data-feather="star" class="star-full"></i>
+          <i data-feather="star" class="star-full"></i>
+          <i data-feather="star"></i>
+          <i data-feather="star"></i>
+        </div>
+        <div class="product-price">IDR 75k <span>IDR 100k</span></div>
+        <a href="#"><i data-feather="shopping-cart"></i><span>add to cart</span></a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Modal box item Detail Start -->
 
     <!-- Feather Icon -->
     <script>
