--- a/index.html
+++ b/index.html
@@ -7,19 +7,31 @@
     <title>Andalan Kopi</title>
 
     <!-- Fonts -->
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,300;0,400;0,700;1,700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,300;0,400;0,700;1,700&display=swap" rel="stylesheet">
 
     <!-- Feather Icons -->
-    <script src="https://unpkg.com/feather-icons"></script>
+    <script src="https://unpkg.com/feather-icons"></script>  
 
     <!-- Style -->
     <link rel="stylesheet" href="css/style.css" />
+
+    <!-- AlpineJS -->
+    <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
+
+    <!-- Midtrans -->
+    <script type="text/javascript"
+    src="https://app.sandbox.midtrans.com/snap/snap.js"
+    data-client-key="SB-Mid-client-9ZbU5Qtg2nxEDfYe"></script>
+
+    <!-- App -->
+    <script src="src/app.js" async ></script>
+
   </head>
   <body>
     <!-- Navbar Start -->
-    <nav class="navbar">
+    <nav class="navbar" x-data>
       <a href="#" class="navbar-logo">Andalan<span>Kopi</span></a>
 
       <div class="navbar-nav">
@@ -32,7 +44,10 @@
 
       <div class="navbar-extra">
         <a href="#" id="search-button"><i data-feather="search"></i></a>
-        <a href="#" id="shopping-cart-button"><i data-feather="shopping-cart"></i></a>
+        <a href="#" id="shopping-cart-button">
+          <i data-feather="shopping-cart"></i>
+          <span class="quantity-badge" x-show="$store.cart.quantity" x-text="$store.cart.quantity"></span>
+        </a>
         <a href="#" id="hamburger-menu"><i data-feather="menu"></i></a>
       </div>
 
@@ -45,32 +60,46 @@
 
       <!-- Shopping Cart Start -->
       <div class="shopping-cart">
+        <template x-for="(item, index) in $store.cart.items" x-key="index">
         <div class="cart-item">
-          <img src="img/products/1.png" alt="Product 1" />
+          <img :src="`img/products/${item.img}`" :alt="item.name" />
         <div class="item-detail">
-            <h3>Product 1</h3>
-            <div class="item-price">IDR 50K</div>
+            <h3 x-text="item.name"></h3>
+            <div class="item-price">
+              <span x-text="rupiah(item.price)"></span> &times;
+              <button id="remove" @click="$store.cart.remove(item.id)">&minus;</button>
+              <span x-text="item.quantity"></span>
+              <button id="add" @click="$store.cart.add(item)">&plus;</button> &equals;
+              <span x-text="rupiah(item.total)"></span>
+            </div>
+        </template>
+        <h4 x-show="!$store.cart.items.length" style="margin-top: 1rem;">Cart is Empty</h4>
+        <h4 x-show="$store.cart.items.length" >Total : <span x-text="rupiah($store.cart.total)"></span></h4>
 
-           </div>
-           <i data-feather="trash-2" class="remove-item"></i>
-          </div>
-        <div class="cart-item">
-          <img src="img/products/1.png" alt="Product 1" />
-        <div class="item-detail">
-            <h3>Product 1</h3>
-            <div class="item-price">IDR 50K</div>
+        <!-- form container -->
+        <div class="form-container" x-show="$store.cart.items.length">
+          <form action="" id="checkoutForm">
+            <input type="hidden" name="items" x-model="JSON.stringify($store.cart.items)">
+            <input type="hidden" name="total" x-model="$store.cart.total">
+            <h5>Customer Detail</h5>
 
-           </div>
-           <i data-feather="trash-2" class="remove-item"></i>
-        </div>
-        <div class="cart-item">
-          <img src="img/products/1.png" alt="Product 1" />
-        <div class="item-detail">
-            <h3>Product 1</h3>
-            <div class="item-price">IDR 50K</div>
+            <label for="name">
+              <span>Name</span>
+              <input type="text" name="name" id="name">
+            </label>
 
-           </div>
-           <i data-feather="trash-2" class="remove-item"></i>
+            <label for="email">
+              <span>Email</span>
+              <input type="text" name="email" id="email">
+            </label>
+
+            <label for="phone">
+              <span>Phone</span>
+              <input type="text" name="phone" id="phone" autocomplete="off">
+            </label>
+
+            <button class="checkout-button disabled" type="submit" id="checkout-button" value="checkout">Checkout</button>
+          </form>
         </div>
       </div>
       <!-- Shopping Cart End -->
@@ -84,7 +113,7 @@
   <main class="content">
     <h1>Dibuat dengan biji kopi <span>Terbaik</span></h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, maiores?</p>
-    <a href="#" class="cta">Beli Sekarang</a>
+    <!-- <a href="#" class="cta">Beli Sekarang</a> -->
   </main>
   </div>
 </section>
@@ -155,96 +184,57 @@
           <p class="menu-card-price">IDR 22K</p>
         </div>
       </div>
-    </section>
+  </section>
     <!-- Menu Section Start -->
 
     <!-- Product Section Start -->
-    <section class="products" id="products">
+    <section class="products" id="products" x-data="products">
       <h2><span>Product</span> Unggulan Kami</h2>
       <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laborum esse sint ipsam, nemo deserunt eos.</p>
 
     <div class="row">
+    <template x-for="(item, index) in items" x-key="index">
       <div class="product-card">
         <div class="product-icons">
-          <a href="#"><i data-feather="shopping-cart"></i></a>
-          <a href="#" class="item-detail-button"><i data-feather="eye"></i></a>
+          <a href="#" @click.prevent="$store.cart.add(item)">
+            <svg width="24" height="24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" >
+            <use href="img/feather-sprite.svg#shopping-cart" />
+          </svg>
+          </a>
+          <a href="#" class="item-detail-button">
+            <svg width="24" height="24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" >
+            <use href="img/feather-sprite.svg#eye" />
+          </svg>
+          </a>
         </div>
         <div class="product-image">
-          <img src="img/products/1.png" alt="product1">
+          <img :src="`img/products/${item.img}`" :alt="item.name">
       </div>
       <div class="product-content">
-        <h4>Coffee Beans 1</h4>
+        <h4 x-text="item.name"></h4>
         <div class="product-stars">
-          <i data-feather="star" class="star-full"></i>
-          <i data-feather="star" class="star-full"></i>
-          <i data-feather="star" class="star-full"></i>
-          <i data-feather="star" class="star-full"></i>
-          <i data-feather="star"></i>
+            <svg width="24" height="24" fill="currentColor" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" >
+            <use href="img/feather-sprite.svg#star" />
+          </svg>
+            <svg width="24" height="24" fill="currentColor" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" >
+            <use href="img/feather-sprite.svg#star" />
+          </svg>
+            <svg width="24" height="24" fill="currentColor" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" >
+            <use href="img/feather-sprite.svg#star" />
+          </svg>
+            <svg width="24" height="24" fill="currentColor" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" >
+            <use href="img/feather-sprite.svg#star" />
+          </svg>
+            <svg width="24" height="24" fill="currentColor" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" >
+            <use href="img/feather-sprite.svg#star" />
+          </svg>
         </div>
-        <div class="product-price">IDR 75k <span>IDR 100k</span></div>
+        <div class="product-price"><span x-text="rupiah(item.price)"></span></div>
       </div>
+      </div>
+      </template>
     </div>
-      <div class="product-card">
-        <div class="product-icons">
-          <a href="#"><i data-feather="shopping-cart"></i></a>
-          <a href="#" class="item-detail-button"><i data-feather="eye"></i></a>
-        </div>
-        <div class="product-image">
-          <img src="img/products/1.png" alt="product1">
-      </div>
-      <div class="product-content">
-        <h4>Coffee Beans 1</h4>
-        <div class="product-stars">
-          <i data-feather="star" class="star-full"></i>
-          <i data-feather="star" class="star-full"></i>
-          <i data-feather="star" class="star-full"></i>
-          <i data-feather="star" class="star-full"></i>
-          <i data-feather="star"></i>
-        </div>
-        <div class="product-price">IDR 75k <span>IDR 100k</span></div>
-      </div>
-    </div>
-      <div class="product-card">
-        <div class="product-icons">
-          <a href="#"><i data-feather="shopping-cart"></i></a>
-          <a href="#" class="item-detail-button"><i data-feather="eye"></i></a>
-        </div>
-        <div class="product-image">
-          <img src="img/products/1.png" alt="product1">
-      </div>
-      <div class="product-content">
-        <h4>Coffee Beans 1</h4>
-        <div class="product-stars">
-          <i data-feather="star" class="star-full"></i>
-          <i data-feather="star" class="star-full"></i>
-          <i data-feather="star" class="star-full"></i>
-          <i data-feather="star"></i>
-          <i data-feather="star"></i>
-        </div>
-        <div class="product-price">IDR 75k <span>IDR 100k</span></div>
-      </div>
-    </div>
-      <div class="product-card">
-        <div class="product-icons">
-          <a href="#"><i data-feather="shopping-cart"></i></a>
-          <a href="#" class="item-detail-button"><i data-feather="eye"></i></a>
-        </div>
-        <div class="product-image">
-          <img src="img/products/1.png" alt="product1">
-      </div>
-      <div class="product-content">
-        <h4>Coffee Beans 1</h4>
-        <div class="product-stars">
-          <i data-feather="star" class="star-full"></i>
-          <i data-feather="star" class="star-full"></i>
-          <i data-feather="star" class="star-full"></i>
-          <i data-feather="star"></i>
-          <i data-feather="star"></i>
-        </div>
-        <div class="product-price">IDR 75k <span>IDR 100k</span></div>
-      </div>
-    </div>
-    </section>
+  </section>
     <!-- Product Section End -->
 
     <!-- Contact Section Start -->
